--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: React app deployment
 
 on:
   push:
-    branches: [ Week-1 ]
+    branches: [ main ]
   pull_request:
-    branches: [ Week-1 ]
+    branches: [ main ]
 
 jobs:
   build:
