--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-jwt": "^1.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
